# grasp-and-sort

./: .gitignore  README.md
src/manip_sort_bringup/: CMakeLists.txt  package.xml
src/manip_sort_bringup/launch/: ur10e_moveit.launch.py  ur10e_sim_moveit.launch.py
src/manip_sort_description/: CMakeLists.txt  package.xml
src/manip_sort_description/config/: chomp_planning.yaml  joint_limits.yaml  moveit_controllers.yaml  ur10e_gripper_controllers.yaml  ur_servo.yaml
src/manip_sort_description/srdf/: ur_with_gripper.srdf.xacro
src/manip_sort_description/urdf/: ur10e_parallel_gripper.urdf.xacro
src/manip_sort_interfaces/: CMakeLists.txt  package.xml
src/manip_sort_interfaces/msg/: DetectedObject.msg  DetectedObjectArray.msg  GraspCandidate.msg
src/manip_sort_perception/: package.xml  setup.cfg  setup.py
src/manip_sort_perception/config/: perception.yaml
src/manip_sort_perception/manip_sort_perception/: __init__.py  debug_vis.py  geometry.py  grasp_candidates.py  offline_overlay.py  perception_grasp_node.py  report_visualization.py  segmentation.py  smoke_checks.py
src/manip_sort_perception/resource/: manip_sort_perception
src/manip_sort_perception/test/: test_grasp_candidates.py  test_segmentation.py
src/manip_sort_pipeline/: CMakeLists.txt  package.xml
src/manip_sort_pipeline/config/: bins.yaml  gz_attach_bridge.yaml  gz_vision_bridge.yaml  scene_sorting.yaml
src/manip_sort_pipeline/include/manip_sort_pipeline/sort_demo/: gazebo.hpp  motion.hpp  runner.hpp  scene.hpp  sorting.hpp  types.hpp
src/manip_sort_pipeline/include/manip_sort_pipeline/vision/: config.hpp  executor.hpp  manager.hpp  types.hpp
src/manip_sort_pipeline/launch/: ur10e_five_point_demo.launch.py  ur10e_sort_demo.launch.py  ur10e_vision_sort_demo.launch.py
src/manip_sort_pipeline/src/: five_point_moveit_demo.cpp  sort_scene_demo.cpp  vision_sort_manager.cpp
src/manip_sort_pipeline/src/sort_demo/: gazebo.cpp  motion.cpp  runner.cpp  scene.cpp  sorting.cpp
src/manip_sort_pipeline/src/vision/: config.cpp  executor.cpp  manager.cpp
src/manip_sort_pipeline/worlds/: hardcoded_sort_scene.sdf  vision_sort_scene.sdf
src/robotiq_description/: CMakeLists.txt  empty.sdf  model.config
src/robotiq_description/urdf/: robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.urdf.xacro
